# lars-analytics

./: .gitignore  Makefile  README.md  config.yml  pyproject.toml
lars_analytics/: cli.py
lars_analytics/analytics/: __init__.py  cli.py
lars_analytics/logs/: __init__.py  cli.py  ua.py
lars_analytics/templates/: analytics.pt
