[project]
name = "lars-analytics"
version = "0.1.0"
description = "Log processing and analytics site generator for file servers"
authors = [
    {name = "Ben Nuttall", email = "ben@bennuttall.com"}
]
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "lars",
    "user-agents (>=2.2)",
    "chameleon (>=4.6.0,<5.0.0)",
]

license = "BSD-3-Clause"
readme = "README.md"

[project.scripts]
lars-analytics = "lars_analytics.cli:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
